--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "deploy": "hardhat run scripts/deploySimpleStorage.js --network circleLayerTestnet",
     "use": "hardhat run scripts/useSimpleStorage.js --network circleLayerTestnet",
     "truffle:migrate": "truffle migrate --network circleLayerTestnet --reset",
-    "truffle:console": "truffle console --network circleLayerTestnet"
+    "truffle:console": "truffle console --network circleLayerTestnet",
+    "prepare": "husky install"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +20,7 @@
     "@truffle/hdwallet-provider": "^2.1.15",
     "dotenv": "^17.2.1",
     "hardhat": "^2.26.2",
+    "husky": "^9.1.7",
     "truffle": "^5.11.5"
   },
   "dependencies": {
