--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,8 +6,6 @@ on:
   pull_request:
     branches: [ main ]
   workflow_dispatch:
-  push: { branches: [ "main" ] }
-  pull_request: { branches: [ "main" ] }
 
 jobs:
   build:
@@ -34,6 +32,7 @@ jobs:
 
       - name: Test
         run: npx hardhat test
+
   deploy:
     name: Deploy to Circle Layer Testnet
     needs: build
@@ -46,7 +45,8 @@ jobs:
 
       - uses: actions/setup-node@v4
         with:
-          node-version: 20
+          node-version: "20.x"
+          cache: "npm"
 
       - name: Install deps (no optional)
         run: npm ci --no-optional
@@ -66,6 +66,3 @@ jobs:
         with:
           name: deployments-${{ github.sha }}
           path: deployments/**
-
-
-
