--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,29 +43,17 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+      - uses: actions/setup-node@v4
         with:
           node-version: "20.x"
           cache: "npm"
 
       - name: Install deps (no optional)
-        run: |
-          npm ci --no-optional || npm install --no-optional
+        run: npm ci --no-optional
 
       - name: Install solidity analyzer for Linux
         if: runner.os == 'Linux'
         run: npm i -D @nomicfoundation/solidity-analyzer-linux-x64-gnu
-
-      - name: Check PRIVATE_KEY is set
-        env:
-          PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
-        run: |
-          if [ -z "$PRIVATE_KEY" ]; then
-            echo "Error: secrets.PRIVATE_KEY is not set"; exit 1;
-          else
-            echo "PRIVATE_KEY is present (length ${#PRIVATE_KEY})";
-          fi
 
       - name: Deploy
         env:
