--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,10 +47,11 @@ jobs:
         with:
           node-version: "20.x"
           cache: "npm"
-
       - name: Install deps (omit optional)
-        run: |`r`n          npm ci --omit=optional || npm install --omit=optional
-      - name: Install solidity analyzer for Linux
+        run: |
+          npm ci --omit=optional || npm install --omit=optional
+
+      - name: Install solidity analyzer for Linux for Linux
         if: runner.os == 'Linux'
         run: npm i -D @nomicfoundation/solidity-analyzer-linux-x64-gnu
 
@@ -69,4 +70,5 @@ jobs:
         with:
           name: deployments-${{ github.sha }}
           path: deployments/**
+
 
