--- a/scripts/package.json
+++ b/scripts/package.json
@@ -1,5 +1,8 @@
-"scripts": {
-  "...": "...",
-  "read": "hardhat run scripts/read.js --network circleLayerTestnet",
-  "set": "hardhat run scripts/set.js --network circleLayerTestnet"
+{
+  "name": "my-project",
+  "version": "1.0.0",
+  "scripts": {
+    "read": "hardhat run --network circleLayerTestnet scripts/read.js",
+    "set":  "hardhat run --network circleLayerTestnet scripts/set.js"
+  }
 }
