--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,86 +2,68 @@
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main
   pull_request:
-    branches: [ main ]
+    branches:
+      - main
   workflow_dispatch:
 
 jobs:
   build_test:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
-        with:
-          node-version: "20.x"
-          cache: "npm"
+      - name: Checkout
+        uses: actions/checkout@v4
 
-      - name: Install dependencies (omit optional)
+      - name: Use Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: 'npm'
+
+      - name: Install deps (omit optional)
         run: npm ci --omit=optional || npm i --omit=optional
 
       - name: Compile
         run: npx hardhat compile
+
       - name: Test
         run: npx hardhat test
 
-
   deploy:
-    name: Deploy to Circle Layer Testnet
-    needs: build
-    if: github.ref == 'refs/heads/main'
-    runs-on: ubuntu-latest
-    permissions:
-      contents: read
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: "20.x"
-          cache: "npm"
-
-      - name: Install deps (omit optional)
-        run: npm ci --omit=optional || npm install --omit=optional
-
-      - name: Install solidity analyzer for Linux
-        if: runner.os == 'Linux'
-        run: npm i -D @nomicfoundation/solidity-analyzer-linux-x64-gnu
-deploy:
     needs: build_test
     if: github.ref == 'refs/heads/main' && (github.event_name == 'push' || github.event_name == 'workflow_dispatch')
     runs-on: ubuntu-latest
     env:
       PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
-      # при желании добавь в Secrets EXPLORER_BASE и раскомментируй ссылку в summary
-      EXPLORER_BASE: ""
+      EXPLORER_BASE: ''
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Use Node.js
+        uses: actions/setup-node@v4
         with:
-          node-version: 20.x
-          cache: npm
+          node-version: '20'
+          cache: 'npm'
+
       - name: Install deps (omit optional)
         run: npm ci --omit=optional || npm i --omit=optional
+
       - name: Deploy
         shell: bash
         run: |
           set -euo pipefail
           npm run -s deploy | tee deploy.log
-
-          # Ожидаем строку вида: "SimpleStorage address: 0xABC..."
           addr=$(sed -n 's/^SimpleStorage address: //p' deploy.log | tail -1)
-
           if [[ -z "$addr" ]]; then
             echo "::error::Couldn't parse SimpleStorage address from deploy output"
             cat deploy.log
             exit 1
           fi
-
           echo "SIMPLE_STORAGE=$addr"          >> "$GITHUB_ENV"
           echo "TRUFFLE_SIMPLE_STORAGE=$addr"  >> "$GITHUB_ENV"
-
           {
             echo "### Deployed SimpleStorage"
             echo
@@ -90,14 +72,3 @@ deploy:
               echo "Explorer: ${EXPLORER_BASE}/address/$addr"
             fi
           } >> "$GITHUB_STEP_SUMMARY"
-
-      - name: Export ABI
-        env:
-          PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
-        run: node scripts/exportAbi.js
-
-      - name: Upload deployment artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: deployments-${{ github.sha }}
-          path: deployments/**
