--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,19 +5,20 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main ]
-  workflow_dispatch:
+  workflow_dispatch: {}
 
 jobs:
   build:
-    runs-on: ubuntu-latest
-    permissions:
-      contents: read
+    runs-on: ubuntu-24.04
 
-    # Прокидываем секреты в окружение job
+    # Эти переменные видны во всех шагах
     env:
+      # Глобально говорим npm не ставить optional deps (fsevents)
+      npm_config_optional: "false"
+      # Секреты подтягиваем в env и дальше используем только env.*
       CIRCLE_RPC_URL: ${{ secrets.CIRCLE_RPC_URL }}
-      PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
       SIMPLE_STORAGE: ${{ secrets.SIMPLE_STORAGE }}
+      PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
 
     steps:
       - name: Checkout
@@ -29,23 +30,18 @@ jobs:
           node-version: 20
           cache: npm
 
-      - name: Install deps
-        run: npm ci
+      - name: Install deps (skip optional)
+        # Дублируем защиту флагом на случай старого lockfile
+        run: |
+          npm ci --omit=optional
 
       - name: Compile
         run: npx hardhat compile
 
-      - name: Test
-        run: npx hardhat test
+      - name: Read SimpleStorage (optional)
+        if: env.CIRCLE_RPC_URL != '' && env.SIMPLE_STORAGE != ''
+        run: npx hardhat run --network circleLayerTestnet scripts/read.js
 
-      # ===== Optional: прочитать значение из SimpleStorage на тестнете =====
-      - name: Read from testnet (optional)
-        if: ${{ github.event_name != 'pull_request' && env.CIRCLE_RPC_URL != '' && env.SIMPLE_STORAGE != '' }}
-        run: npm run read
-
-      # ===== Optional: записать значение в SimpleStorage на тестнете =====
-      - name: Set on testnet (optional)
-        if: ${{ github.event_name != 'pull_request' && env.CIRCLE_RPC_URL != '' && env.SIMPLE_STORAGE != '' && env.PRIVATE_KEY != '' }}
-        env:
-          VALUE: "4242"
-        run: npm run set
+      - name: Set SimpleStorage (optional)
+        if: env.CIRCLE_RPC_URL != '' && env.SIMPLE_STORAGE != '' && env.PRIVATE_KEY != ''
+        run: VALUE=4242 npx hardhat run --network circleLayerTestnet scripts/set.js
